review: go over all files and leave todo comments

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,3 +17,5 @@ $max-width: 1280px;
 
 $break-desktop: 768px;
 $break-mobile: 767px;
+
+// Todo: add _fonts.scss or _typography.scss, and add some nice custom font
