--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,8 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  line-height: 2;
 }
 
 #root {
@@ -14,4 +15,11 @@ html, body, #root {
   position: relative;
   display: flex;
   flex-direction: column;
+}
+
+/* NASLOVI – Lexend */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Lexend', sans-serif;
+  font-weight: 500;
+  margin: 0;
 }
