--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,8 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: $font-primary;
+  font-weight: $font-medium;
   line-height: 2;
 }
 
@@ -19,7 +20,7 @@ html, body, #root {
 
 /* NASLOVI – Lexend */
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lexend', sans-serif;
-  font-weight: 500;
+  font-family: $font-secondary;
+  font-weight: $font-medium;
   margin: 0;
 }
