--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,3 +17,12 @@ $max-width: 1280px;
 
 $break-desktop: 768px;
 $break-mobile: 767px;
+
+/* Font families */
+$font-primary: 'Poppins', system-ui, -apple-system, sans-serif;
+$font-secondary: 'Lexend', system-ui, sans-serif;
+
+/* Font weights */
+$font-regular: 400;
+$font-medium: 500;
+$font-bold: 700;
